# crazyflie-simulation

./: .gitignore  LICENSE  README.md  module.json
controllers/: .gitignore  SGBA.h  pid_controller.c  pid_controller.h  pid_controller.i  setup.py  wallfollowing_multiranger.c  wallfollowing_multiranger.h  wallfollowing_multiranger_onboard.h  wallfollowing_with_avoid.h
controllers/c_based/: pid_controller.c
controllers/python/: pid_controller_full_state.py
controllers/python_based/: pid_controller.py
controllers/wall_following/: wallfollowing_multiranger_onboard.c
controllers_shared/c_based/: pid_controller.c
crazyflie_ws/src/crazyflie_description/: CMakeLists.txt  package.xml
crazyflie_ws/src/crazyflie_description/config/: ros_gz_crazyflie_bridge.yaml
crazyflie_ws/src/crazyflie_description/launch/: spawn_crazyflie_gz.launch.py  view_crazyflie_launch.py
crazyflie_ws/src/crazyflie_description/meshes/collada_files/: cf2_assembly_with_props.dae
crazyflie_ws/src/crazyflie_description/rviz/: crazyflie_body.rviz
crazyflie_ws/src/crazyflie_description/urdf/: crazyflie_body.xacro
docs/: index.md
docs/functional_areas/: controllers.md  index.md  meshes.md  simulators.md
docs/installing/: Install_webots.md  index.md  install_gazebo.md  install_webots.md
docs/user_guides/: gazebo_spin_motors.md  index.md  (+3 more)
meshes/: battery.stl  battery_holder.stl  cf_body.stl  cw_prop.stl  pin_headers.stl
simulator_files/gazebo/plugins/tuning_gui/: CMakeLists.txt  TuningPlugin.cc  TuningPlugin.hh  TuningPlugin.qml  TuningPlugin.qrc
webots/: compare_models.py
(+62 files in other folders)
